ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode14/input.ts.stderr
error[2410]: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode14/input.ts:2:1
  |
2 | with (a) {
  | ^^^^

error: With statement are not allowed in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode14/input.ts:2:1
  |
2 | with (a) {
  | ^^^^

